--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MusicPlayer</string>
+    <string name="title_activity_offline_try">OfflineActivityTry</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="loading">loading</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_play_lists">PlayLists</string>
+    <string name="title_activity_login_firebase">LoginFirebase</string>
+
 </resources>
