--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,21 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_play_lists">PlayLists</string>
     <string name="title_activity_login_firebase">LoginFirebase</string>
+    <string name="default_web_client_id" />
+    <string name="email">email</string>
+    <string name="password">password</string>
+    <string name="loginButton">"loginButton "</string>
+    <string name="loginGoogle">loginGoogle</string>
+    <string name="registerButton">registerButton</string>
+    <string name="loginCompleteToast" />
+    <string name="emailSend" />
+    <string name="openEmailApp" />
+    <string name="emailSendFail" />
+    <string name="tryAgain" />
+    <string name="loginError" />
+    <string name="emailHint">emailHint</string>
+    <string name="username">username</string>
+    <string name="passwordAgain">passwordAgain</string>
+    <string name="register">register</string>
 
 </resources>
