--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,22 @@
 <resources>
     <string name="app_name">MusicPlayer</string>
     <string name="title_activity_offline_try">OfflineActivityTry</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="loading">loading</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_play_lists">PlayLists</string>
-    <string name="default_web_client_id">default_web_client_id</string>
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="loginButton">"loginButton "</string>
     <string name="loginGoogle">loginGoogle</string>
     <string name="registerButton">registerButton</string>
-    <string name="loginCompleteToast" />
-    <string name="emailSend" />
-    <string name="openEmailApp" />
-    <string name="emailSendFail" />
-    <string name="tryAgain" />
-    <string name="loginError" />
+    <string name="loginCompleteToast">loginCompleteToast</string>
+    <string name="emailSend">emailSend</string>
+    <string name="openEmailApp">openEmailApp</string>
+    <string name="emailSendFail">emailSendFail</string>
+    <string name="tryAgain">tryAgain</string>
+    <string name="loginError">loginError</string>
     <string name="emailHint">emailHint</string>
     <string name="username">username</string>
     <string name="passwordAgain">passwordAgain</string>
@@ -38,5 +36,8 @@
     <string name="passwordUpdateFailed">passwordUpdateFailed</string>
     <string name="cantFindUserInformation">cantFindUserInformation</string>
     <string name="usernameNoSpaces">usernameNoSpaces</string>
+    <string name="title_activity_track_pedo">title_activity_track_pedo</string>
+    <string name="title_activity_pedometer">title_activity_pedometer</string>
+    <string name="title_activity_login_firebase">title_activity_login_firebase</string>
 
 </resources>
