Modificate drawable layout files and create new files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="usernameNoSpaces">usernameNoSpaces</string>
     <string name="title_activity_track_pedo">title_activity_track_pedo</string>
     <string name="title_activity_pedometer">title_activity_pedometer</string>
+    <string name="title_activity_login_firebase">title_activity_login_firebase</string>
 
 </resources>
